<resources>
    <string name="app_name">WorkItReels</string>
    <string name="started_title">Hello You</string>
    <string name="started_sub_title">
        Nice to meet you, Let the <b>Fitness Journey Begin!</b>
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with the community.</br>
    </string>
    <string name="illustraton_img">Illustraton Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="lgn_in">Login into Community..!</string>
    <string name="login_sub_title"><font color="#00C9B8"><b>Login</b></font> If you already have an account.
    </string>
    <string name="login_email">Your Registered Email Address</string>
    <string name="lgn_password">Your Password</string>
    <string name="lgn_forgot_pw">Forgot Password ?</string>
    <string name="login_havent_account">
        I don\'t have an account<font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_account">Create an Account</string>

    <string name="register_sub_title"><font color="#00C9B8"><b>Register</b></font> to get started with the community.</string>
    <string name="register_fullname">Your Full name</string>
    <string name="register_email_address">Your Email Address</string>
    <string name="register_username">Your Username</string>
    <string name="register_password">Your Password</string>
    <string name="register_confirm_password">Confirm Password</string>

    <string name="register_have_account">I already have an account <font color="#00C9B8"><b>Login</b></font></string>

    <string name="reset_pw_title">Reset your password</string>

    <string name="reset_pw_sub_title"><font color="#00c9b8"><b>Reset Password,</b></font> if you forgot your password.</string>
    <string name="btn_reset_pw">Reset Password</string>

    <string name="back_to_login">
       Back to <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="video_caption">Caption of the Video</string>
    <string name="workout_names">Chest</string>

    <string-array name="my_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


</resources>